# 6502CPU

./: .gitignore  CMakeLists.txt  CPU65C02.cpp  CPU65C02.h  Important_65C02_instructions.md  README.md  emulator  emulator-debug-single-step  main  main.cpp  test_logical_ops.cpp  test_stack_ops.cpp
